--- a/package.json
+++ b/package.json
@@ -3,52 +3,52 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "export NODE_OPTIONS='--max-old-space-size=8192' && next dev",
+    "dev": "set NODE_OPTIONS=--max-old-space-size=8192 && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.414.0",
-    "@clerk/nextjs": "^4.23.3",
-    "@neondatabase/serverless": "^0.6.0",
-    "@pinecone-database/doc-splitter": "^0.0.1",
-    "@pinecone-database/pinecone": "^1.0.1",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@tanstack/react-query": "^4.33.0",
-    "@types/md5": "^2.3.2",
-    "@types/node": "20.5.9",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "ai": "^2.2.11",
-    "autoprefixer": "10.4.15",
-    "axios": "^1.5.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "dotenv": "^16.3.1",
-    "drizzle-kit": "^0.19.13",
-    "drizzle-orm": "^0.28.5",
+    "@aws-sdk/client-s3": "^3.531.0",
+    "@clerk/nextjs": "^4.44.3",
+    "@neondatabase/serverless": "^0.11.1",
+    "@pinecone-database/doc-splitter": "^0.1.1",
+    "@pinecone-database/pinecone": "^2.0.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@tanstack/react-query": "^5.27.0",
+    "@types/md5": "^2.3.3",
+    "@types/node": "^20.11.25",
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17",
+    "ai": "^2.4.16",
+    "autoprefixer": "^10.4.17",
+    "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.20.10",
+    "drizzle-orm": "^0.30.6",
     "encoding": "^0.1.13",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "langchain": "^0.0.150",
-    "lucide-react": "^0.274.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.4",
+    "langchain": "^0.1.20",
+    "lucide-react": "^0.296.0",
     "md5": "^2.3.0",
-    "next": "13.4.19",
-    "openai-edge": "^1.2.2",
+    "next": "^14.1.4",
+    "openai-edge": "^1.3.4",
     "pdf-parse": "^1.1.1",
-    "pdfjs-dist": "^3.10.111",
-    "pg": "^8.11.3",
-    "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-dropzone": "^14.2.3",
+    "pdfjs-dist": "^4.2.67",
+    "pg": "^8.11.5",
+    "postcss": "^8.4.38",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.4",
     "react-hot-toast": "^2.4.1",
     "stream": "^0.0.2",
-    "stripe": "^13.4.0",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
+    "stripe": "^14.20.0",
+    "tailwind-merge": "^1.15.0",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2"
+    "typescript": "^5.4.3"
   }
 }
